tests/paczka1/fuzzy1/43172463.err
Error in line 10: ISrl2npIMUM S281 26,3
